--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="build/css/app.css">
-    <title>Bienes Raíces</title>
+    <title>Bienes Raíces DEV</title>
 </head>
 <body>
 
@@ -67,7 +67,34 @@
         <h2>Casas y Depas en Venta</h2>
 
         <div class="contenedor-anuncios">
-            
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio1.webp" type="image/webp">
+                    <source srcset="build/img/anuncio1.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio1.jpg" alt="anuncio 1 imagen">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa De Lujo en el lago</h3>
+                    <p>Casa de lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="precio">$3,000,000</p>
+
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
 
