terminando diseño front

--- a/anuncios.html
+++ b/anuncios.html
@@ -34,7 +34,197 @@
 
 <!-- MAIN -->
     <main class="contenedor seccion">
-        <h1>ANUNCIOS</h1>
+        <h1>Casas y Depas en venta</h1>
+
+        <div class="contenedor-anuncios">
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio1.webp" type="image/webp">
+                    <source srcset="build/img/anuncio1.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio1.jpg" alt="anuncio 1 imagen">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa De Lujo en el lago</h3>
+                    <p>Casa de lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="precio">$3,000,000</p>
+
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a class="boton boton-amarillo" href="anuncios.html">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio2.webp" type="image/webp">
+                    <source srcset="build/img/anuncio2.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio2.jpg" alt="anuncio 2 imagen">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa terminados de lujo</h3>
+                    <p>Casa de lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="precio">$3,000,000</p>
+
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a class="boton boton-amarillo" href="anuncios.html">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio3.webp" type="image/webp">
+                    <source srcset="build/img/anuncio3.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio3.jpg" alt="anuncio 3 imagen">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa con alberca</h3>
+                    <p>Casa de lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="precio">$3,000,000</p>
+
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a class="boton boton-amarillo" href="anuncios.html">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio4.webp" type="image/webp">
+                    <source srcset="build/img/anuncio4.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio4.jpg" alt="anuncio 4 imagen">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa De Lujo en el lago</h3>
+                    <p>Casa de lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="precio">$3,000,000</p>
+
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a class="boton boton-amarillo" href="anuncios.html">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio5.webp" type="image/webp">
+                    <source srcset="build/img/anuncio5.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio5.jpg" alt="anuncio 5 imagen">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa De Lujo en el lago</h3>
+                    <p>Casa de lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="precio">$3,000,000</p>
+
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a class="boton boton-amarillo" href="anuncios.html">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio6.webp" type="image/webp">
+                    <source srcset="build/img/anuncio6.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio6.jpg" alt="anuncio 6 imagen">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa De Lujo en el lago</h3>
+                    <p>Casa de lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="precio">$3,000,000</p>
+
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a class="boton boton-amarillo" href="anuncios.html">Ver Propiedad</a>
+                </div>
+            </div>
+            
+        </div>
+
     </main>
 
 <!-- FIN DE MAIN -->
