--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <nav class="navegacion">
                     <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">blog</a>
-                    <a href="contacto.html">contacto</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contacto.html">Contacto</a>
                 </nav>
 
             </div>  <!--Cierre de barra-->
@@ -263,8 +263,8 @@
             <nav class="navegacion">
                 <a href="nosotros.html">Nosotros</a>
                 <a href="anuncios.html">Anuncios</a>
-                <a href="blog.html">blog</a>
-                <a href="contacto.html">contacto</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Contacto</a>
             </nav>
         </div>
         <p class="copyright">Todos los derechos reservados 2022</p>
